Changed csv files and updated it in the notebook

--- a/SMS Spam Detection.ipynb
+++ b/SMS Spam Detection.ipynb
@@ -150,8 +150,8 @@
    "outputs": [],
    "source": [
     "# import the spam email csv\n",
-    "df = pd.read_csv('email_train.csv', encoding='unicode_escape')\n",
-    "df_temp = pd.read_csv('email_test.csv', encoding='unicode_escape')"
+    "df = pd.read_csv('sms_train.csv', encoding='unicode_escape')\n",
+    "df_temp = pd.read_csv('sms.test.csv', encoding='unicode_escape')"
    ]
   },
   {
